--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,6 +6,6 @@ dockers:
   - dockerfile: Dockerfile_release
     image_templates:
       - ghcr.io/catouc/gitlab-ci-crawler:latest
-      - ghcr.io/catouc/gitlab-ci-crawler:{{ .Tag }}
+      - ghcr.io/catouc/gitlab-ci-crawler:{{ .Major }}.{{ .Minor }}.{{ .Patch }}
       - ghcr.io/catouc/gitlab-ci-crawler:{{ .Major }}.{{ .Minor }}
       - ghcr.io/catouc/gitlab-ci-crawler:{{ .Major }}
