Add new tests for commented out parts in yml files
Trying to reproduce https://github.com/catouc/gitlab-ci-crawler/issues/103.
Did not parse any commented code so will need more detailed testing to
see whether it happens further up the stack? But the crawler is just
building on these parsed slices and never gooes into the actual yaml
bytes.

--- a/test-files/gitlab-ci-triggers.yaml
+++ b/test-files/gitlab-ci-triggers.yaml
@@ -13,3 +13,7 @@ project-branch-trigger:
 include-trigger:
   trigger:
     include: "some-child/pipeline.yml"
+
+#include-trigger:
+#  trigger:
+#    include: "some-child/pipeline.yml"
